# ChangeLog for kde-base/kdepim-kioslaves
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-kioslaves/ChangeLog,v 1.75 2007/04/11 20:48:07 carlo Exp $

*kdepim-kioslaves-3.5.6-r1 (11 Apr 2007)
*kdepim-kioslaves-3.5.5-r1 (11 Apr 2007)

  11 Apr 2007; Carsten Lohrke <carlo@gentoo.org>
  +kdepim-kioslaves-3.5.5-r1.ebuild, +kdepim-kioslaves-3.5.6-r1.ebuild:
  Fix infinite loop in IMAP kioslave, causing local DoS.

  05 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -files/kdepim-kioslaves-3.5.2-fixes.diff,
  -files/kdepim-kioslaves-3.5.2-fixes-2.diff,
  -files/configure-fix-kdepim-sasl.patch, -files/imap-dos.diff:
  Remove unneeded patches.

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org>
  -kdepim-kioslaves-3.5.2-r3.ebuild:
  Remove old versions.

  18 Jan 2007; Carsten Lohrke <carlo@gentoo.org>
  kdepim-kioslaves-3.5.6.ebuild:
  Update minimal needed versions.

  17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Tarball was refreshed, regenerate digest.

*kdepim-kioslaves-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +kdepim-kioslaves-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> kdepim-kioslaves-3.5.5.ebuild:
  Stable on ia64.

  06 Dec 2006; <kloeri@gentoo.org> kdepim-kioslaves-3.5.5.ebuild:
  Stable on Alpha.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org>
  kdepim-kioslaves-3.5.5.ebuild:
  Stable on ppc64

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  -kdepim-kioslaves-3.5.3.ebuild, -kdepim-kioslaves-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org>
  kdepim-kioslaves-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  kdepim-kioslaves-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org>
  kdepim-kioslaves-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.
