@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-kioslaves/kdepim-kioslaves-3.5.5-r1.ebuild,v 1.1 2007/04/11 20:48:07 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdepim-kioslaves/kdepim-kioslaves-3.5.5-r1.ebuild,v 1.2 2007/04/12 19:28:51 armin76 Exp $
 
 KMNAME=kdepim
 KMMODULE=kioslaves
@@ -13,7 +13,7 @@ SRC_URI="${SRC_URI}
 	mirror://gentoo/kdepim-3.5-patchset-03.tar.bz2"
 
 DESCRIPTION="kioslaves from kdepim package"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
 IUSE="sasl"
 DEPEND="sasl? ( >=dev-libs/cyrus-sasl-2 )
 	$(deprange 3.5.3 $MAXKDEVER kde-base/libkmime)"
