@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/libkcal-3.5.5-r1.ebuild,v 1.2 2007/04/12 19:18:45 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/libkcal-3.5.5-r1.ebuild,v 1.3 2007/04/12 19:25:57 armin76 Exp $
 
 KMNAME=kdepim
 MAXKDEVER=$PV
@@ -11,7 +11,7 @@ SRC_URI="${SRC_URI}
 	mirror://gentoo/kdepim-3.5-patchset-03.tar.bz2"
 
 DESCRIPTION="KDE kcal library for korganizer etc"
-KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ia64 ~ppc ~ppc64 ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 DEPEND="$(deprange $PV $MAXKDEVER kde-base/ktnef)"
