@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/libkcal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/ChangeLog,v 1.71 2007/04/11 20:54:27 carlo Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/libkcal/ChangeLog,v 1.72 2007/04/12 19:25:57 armin76 Exp $
+
+  12 Apr 2007; Raúl Porcel <armin76@gentoo.org> libkcal-3.5.5-r1.ebuild:
+  ia64 + x86 stable wrt bug 174216
 
 *libkcal-3.5.6-r1 (11 Apr 2007)
 
